--- a/bc-react/src/style/SplashPage.scss
+++ b/bc-react/src/style/SplashPage.scss
@@ -16,7 +16,7 @@
     text-align: center;
     overflow: hidden;
     display: inline-block;
-    font-family: 'Amatic SC';
+    font-family: 'Amatic SC', sans-serif;
     color: black;
   }
 
