--- a/bc-react/src/style/UserSignup.scss
+++ b/bc-react/src/style/UserSignup.scss
@@ -39,7 +39,7 @@
     width: 50%;
     text-align: center;
     display: inline-block;
-    font-family: 'Amatic SC';
+    font-family: 'Amatic SC', sans-serif;
     color: black;
     font-size: 35px;
     margin-top: 30px;
