worked on user profile page

--- a/bc-react/src/style/AdminPage.scss
+++ b/bc-react/src/style/AdminPage.scss
@@ -3,6 +3,15 @@
   text-align: center;
   padding: none;
 
+  h3 {
+    font-family: 'Dancing Script';
+    text-align: center;
+    font-size: 52px;
+    font-style: italic;
+    font-weight: bold;
+    margin-top: -8px;
+  }
+
   button {
     border-width: thin;
     font-family: 'Abel';
