--- a/bc-react/src/style/Sidebar.scss
+++ b/bc-react/src/style/Sidebar.scss
@@ -6,7 +6,7 @@
   table {
     height: 100%;
     position: fixed;
-    width: 160px;
+    width: 150px;
     background-color: fuchsia;
   }
 
@@ -16,7 +16,7 @@
     margin-top: 0px;
     margin-bottom: 0px;
   }
-
+5
   img:hover .caption {
     display: block;
   }
