--- a/bc-react/src/style/App.scss
+++ b/bc-react/src/style/App.scss
@@ -22,15 +22,12 @@
     justify-content: center;
     align-items: center;
 }*/
-//get rid of blue outline on links and buttons
-input:focus {
+
+//this code removes the blue outline on links and buttons
+input:focus, button:focus {
     outline:none !important;
 }
-
-button:focus {
-    outline:none !important;
-}
-
+//fruit border at bottom of splash, login, signup pages
 .fruit-border {
   position: fixed;
   bottom:0;
@@ -39,6 +36,8 @@ button:focus {
   z-index: -1;
   opacity: 0.8;
 }
+
+//general font
 .FontAmatic {
   font-family: 'Amatic SC', sans-serif;
   font-size: 40px;
@@ -47,19 +46,7 @@ button:focus {
   margin-top: 30px;
 }
 
-.center {
-  text-align: center;
-}
-
-h3 {
-  font-family: 'Dancing Script';
-  text-align: center;
-  font-size: 52px;
-  font-style: italic;
-  font-weight: bold;
-  margin-top: -8px;
-}
-
+//general styling for forms
 form {
   text-align: center;
   font-family: 'Abel', sans-serif;
@@ -72,6 +59,13 @@ form {
 ::-moz-placeholder { /* Firefox 19+ */ text-align: center;}
 :-ms-input-placeholder {text-align: center;}
 
+
+//this code makes sure that autofilled fields have a white background (default is yellow)
+input:-webkit-autofill {
+    -webkit-box-shadow: 0 0 0 1000px white inset !important;
+}
+
+//button styling for admin and current event pages
 .align-button {
   text-align: center;
   font-family: 'Amatic SC', sans-serif;
@@ -79,15 +73,7 @@ form {
   color: black;
 }
 
-button:hover {
-  background-color: #def9a3;
-}
-
-input:-webkit-autofill {
-    -webkit-box-shadow: 0 0 0 1000px white inset !important;
-}
-
-
+//wobble effect used on login, sign up, sidebar components
 @-webkit-keyframes wobble {
   16.65% {
     -webkit-transform: translateY(8px);
@@ -114,8 +100,6 @@ input:-webkit-autofill {
     transform: translateY(0);
   }
 }
-r
-//wobble stylings. Location: login, sign up, sidebar
 
 .wobble {
   display: inline-block;
