--- a/bc-react/src/style/UserProfile.scss
+++ b/bc-react/src/style/UserProfile.scss
@@ -1,3 +1,63 @@
-.profile-container {
-  font-size: 200px;
+.profile-page {
+  margin-left: 200px;
+
+  .welcome-user {
+    margin-left: -200px;
+    text-align: center;
+    font-family: 'Dancing Script';
+    font-size: 52px;
+    font-style: italic;
+    font-weight: bold;
+    margin-top: -8px;
+  }
+
+  .editable {
+    font-style: italic;
+    color: fuchsia;
+    text-shadow: 0.1px 0.1px black;
+  }
+
+  .read-only {
+    font-style: normal;
+    color: black;
+    text-shadow: none;
+  }
+
+  .edit {
+    color: orange;
+    width: 30%;
+    text-align: center;
+    font-family: 'Amatic SC';
+    font-size: 3em;
+  }
+
+  .fields {
+    font-weight: bold;
+  }
+
+  td {
+    border: none;
+    background-color: white;
+    font-family: 'Abel';
+    font-size: 20px;
+    padding-left: 5px;
+    padding-right: 5px;
+    white-space: nowrap;
+    overflow: hidden;
+  }
+
+  tr td {
+    background-color: white;
+    padding: none;
+  }
+
+  input {
+    border: none;
+    background-color: transparent;
+    margin: 0;
+  }
+
+  img:hover {
+    cursor: pointer;
+  }
 }
