--- a/bc-react/src/style/Modal.scss
+++ b/bc-react/src/style/Modal.scss
@@ -1,15 +1,11 @@
-#modal {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  z-index: 1010;
+.closeModal {
+  visibility: hidden;
 }
 
-#modal-overlay {
-  z-index: 1000;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+.openModal {
+  visibility: visible;
+}
+
+#x:hover {
+  cursor: pointer;
 }
