started to build Vote Page, fixed functionality for Edit Place on admin page, edited style of calendar

--- a/bc-react/src/style/App.scss
+++ b/bc-react/src/style/App.scss
@@ -13,6 +13,7 @@
 @import url('./UserSignUp.css');
 @import url('./UserProfile.css');
 @import url('./SearchBar.css');
+@import url('./Events.css');
 
 /*goal for centering: create one single div set the width of the elements and the margin around them to auto*/
 
