--- a/bc-react/src/style/Modal.scss
+++ b/bc-react/src/style/Modal.scss
@@ -1,11 +1,28 @@
 .closeModal {
   visibility: hidden;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1010;
 }
 
 .openModal {
   visibility: visible;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1010;
 }
 
 #x:hover {
   cursor: pointer;
+}
+
+.overlay {
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
