--- a/bc-react/src/style/AdminPage.scss
+++ b/bc-react/src/style/AdminPage.scss
@@ -154,24 +154,18 @@
   .calendar-div {
     align-items: center;
     position: relative;
-    width: 2000px;
     margin: auto;
-  }
-
-  .admin-calendar {
-    background-color: rgba(0, 0, 0, .5);
-    border: 2px solid rgba(0, 0, 0, .5);
+    width: 60%;
+    background-color: white;
+    border: 2px solid lightgray;
     /*border-radius: 20px;*/
-    box-shadow: 2px 2px 2px 2px;
     text-align: center;
-    width: 65%;
+    /*width: 100%;*/
     height: 500px;
     padding: 50px;
-    font-family: 'Amatic SC', cursive;
-    font-size: 50px;
-    margin-top: 50px;
+    font-family: 'Abel', sans-serif, cursive;
+    font-size: 20px;
     margin-bottom: 50px;
-    font-weight: bold;
   }
 
 }
