--- a/bc-react/src/style/Home.scss
+++ b/bc-react/src/style/Home.scss
@@ -44,20 +44,18 @@
 
     //calendar
     .calendar-div{
-      background-color: #eeeeee;
-      border: 2px solid rgba(0, 0, 0, .5);
+      background-color: white;
+      border: 2px solid lightgray;
       /*border-radius: 20px;*/
-      box-shadow: 2px 2px 2px 2px;
       text-align: center;
       /*width: 100%;*/
       height: 500px;
       padding: 50px;
-      font-family: 'Amatic SC', sans-serif, cursive;
-      font-size: 50px;
+      font-family: 'Abel', sans-serif, cursive;
+      font-size: 20px;
       margin-top: 30px;
       margin-bottom: 50px;
       margin-left: 0px;
-      font-weight: bold;
     }
     /*.hr-home{
       width: 80%;
