--- a/bc-react/src/style/React-big-calendar.scss
+++ b/bc-react/src/style/React-big-calendar.scss
@@ -95,6 +95,7 @@ button.rbc-input::-moz-focus-inner {
   width: 100%;
   padding: 0 10px;
   text-align: center;
+  font-size: 30px;
 }
 .rbc-toolbar button {
   color: #373a3c;
@@ -174,12 +175,12 @@ button.rbc-input::-moz-focus-inner {
 .rbc-event {
   cursor: pointer;
   padding: 2px 5px;
-  background-color: #3174ad;
+  background-color: #03a9f3;
   border-radius: 5px;
   color: #fff;
 }
 .rbc-event.rbc-selected {
-  background-color: #265985;
+  background-color: #03a9f3;
 }
 .rbc-event-label {
   font-size: 80%;
@@ -562,4 +563,9 @@ button.rbc-input::-moz-focus-inner {
 .rbc-rtl .rbc-current-time-indicator::before {
   left: 0;
   right: -3px;
+}
+
+.rbc-header {
+  background-color: #9675ce;
+  color: white;
 }
