--- a/bc-react/src/style/Header.scss
+++ b/bc-react/src/style/Header.scss
@@ -1,11 +1,8 @@
 .header {
   text-align: center;
-
-    h2 {
-      font-family: 'Amatic SC', sans-serif;
-      font-size: 7.5em;
-      color: fuchsia;
-      font-weight: bold;
-  }
-
+  background-color: blue;
+  font-family: 'Amatic SC', sans-serif;
+  font-size: 7.5em;
+  color: fuchsia;
+  font-weight: bold;
 }
