--- a/bc-react/src/style/Home.scss
+++ b/bc-react/src/style/Home.scss
@@ -1,5 +1,9 @@
 .home-page {
+  .wrapper {
+    display: flex;
+    flex-direction: column;
 
+  }
     text-align: center;
     margin-left: 15%;
 
