--- a/bc-react/src/style/UserSignup.scss
+++ b/bc-react/src/style/UserSignup.scss
@@ -35,12 +35,6 @@
     font-size: 3em;
     background-color: lightgreen;
   }
-  .button-container {
-    position: relative;
-    width: 315px;
-    margin: auto;
-    background-color: orange;
-  }
 
   .let-me-in {
     background-color: lightblue;
@@ -50,14 +44,19 @@
     background-color: salmon;
   }
 
+  .button-container {
+    position: relative;
+    margin: auto;
+    background-color: orange;
+  }
   .let-me-in, .take-me-back {
-    width: 50%;
+    width: 155px;
+    flex-wrap: wrap;
     text-align: center;
     display: inline-block;
     font-family: 'Amatic SC', sans-serif;
     color: black;
     font-size: 35px;
-    margin-top: 30px;
   }
   .entry-button {
     background-color: white;
