--- a/bc-react/src/style/SplashPage.scss
+++ b/bc-react/src/style/SplashPage.scss
@@ -3,30 +3,34 @@
   .wrapper {
     display: flex;
     height: 100vh;
-    border: 10px solid yellow;
     flex-direction: column;
     justify-content: center;
   }
 
   .header-wrapper {
-    margin-top: -60px;
+    margin-top: -160px;
   }
 
   .button-container {
-    display: flex;
-    justify-content: center;
+    align-self: center;
+    width: 300px;
+  }
+
+  .link {
+    color: black;
+    text-decoration: none;
+  }
+  .link:hover {
+    text-decoration: underline;
   }
 
   .login, .signup {
-    width: 155px;
-    flex-wrap: wrap;
-    background-color: orange;
+    width: 150px;
     font-family: 'Amatic SC', sans-serif;
     text-align: center;
+    flex-wrap: wrap;
     display: inline-block;
+    font-size: 40px;
   }
-
-  .login {background-color: lightblue;}
-  .signup {background-color: orange;}
 
 }
