fixed positioning of sign up error fields

--- a/bc-react/src/style/UserSignup.scss
+++ b/bc-react/src/style/UserSignup.scss
@@ -1,10 +1,10 @@
 
 .help-block {
     display: block;
-    margin-top: -30px;
-    margin-bottom: 10px;
-    margin-right: -620px;
+    font-size: .9em;
     color: #e22020;
+    margin-left: 350px;
+    margin-top: -26px;
 }
 
 .signup-page {
