--- a/bc-react/src/style/App.scss
+++ b/bc-react/src/style/App.scss
@@ -10,7 +10,7 @@
 @import url('./Sidebar.css');
 @import url('./SplashPage.css');
 @import url('./UserLogin.css');
-@import url('./UserSignUp.css');
+@import url('./UserSignup.css');
 @import url('./UserProfile.css');
 @import url('./SearchBar.css');
 @import url('./Events.css');
