--- a/bc-react/src/style/Home.scss
+++ b/bc-react/src/style/Home.scss
@@ -1,24 +1,34 @@
 .home-page {
-  .wrapper {
+
+  .sidebar-wrapper {
     display: flex;
-    flex-direction: row;
+    background-color: pink;
+    justify-content: flex-start;
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .entirepage {
+    display: flex;
+    flex-direction: column;
     border: 10px solid yellow;
     min-height: 100vh;
+    justify-content: center;
+    align-items: center;
   }
-    text-align: center;
 
     //sexy toast
-    .giphy-div {
-      width:100%;
-      height:0;
-      padding-bottom:73%;
-      position:relative;
-    }
-    .giphy-embed{
-      position: absolute;
-      width: 100%;
-      height: 100%;
-    }
+    // .giphy-div {
+    //   width:100%;
+    //   height:0;
+    //   padding-bottom:73%;
+    //   position:relative;
+    // }
+    // .giphy-embed{
+    //   position: absolute;
+    //   width: 100%;
+    //   height: 100%;
+    // }
 
     //welcome message
     .welcome-message {
@@ -26,9 +36,9 @@
         font-family: 'Abel';
         border: none;
         background-color: #def9a3;
-        width: 75%;
         box-shadow: 0.5px 0.5px 0.5px 0.5px green;
         font-size: 25px;
+        padding: 5px;
     }
     .welcome-user, .reminder, .upcoming-event {
       display: inline-block;
@@ -38,17 +48,9 @@
       padding-right: 5px;
     }
 
-    /*.container{
-      background-color: gray;
-      margin-left: 250px;
-      margin-right: 30px;
-      width: 100%
-    }*/
-
-
     //calendar
     .calendar-div{
-      background-color: white;
+      background-color: green;
       border: 2px solid lightgray;
       /*border-radius: 20px;*/
       text-align: center;
@@ -61,24 +63,6 @@
       margin-bottom: 50px;
       margin-left: 0px;
     }
-    /*.hr-home{
-      width: 80%;
-    }*/
-    /*.col-xs-6{
-      background-color: red;
-    }
-    .col-xs-3{
-      background-color: blue;
-      height: 50px;
-    }
-    .col-xs-1{
-      background-color: purple;
-      height: 50px;
-    }
-    .col-xs-8{
-      background-color: yellow;
-    }*/
-
     .rbc-agenda-view table thead > tr > th {
       padding: 17px 5px;
       text-align: left;
