--- a/bc-react/src/style/Home.scss
+++ b/bc-react/src/style/Home.scss
@@ -1,20 +1,30 @@
 .home-page {
 
+  //
+  // display: flex;
+  // flex-direction: column;
+  // min-height: 100vh;
+  // justify-content: center;
+  // align-items: center;
+
   .sidebar-wrapper {
-    display: flex;
-    background-color: pink;
-    justify-content: flex-start;
-    flex-direction: column;
-    text-align: center;
+    // display: flex;
+    // justify-content: flex-start;
+    // flex-direction: column;
+    // text-align: center;
+    display: inline-block;
+    height: 100vh;
+    position: fixed;
   }
 
   .entirepage {
     display: flex;
     flex-direction: column;
-    border: 10px solid yellow;
-    min-height: 100vh;
+    // min-height: 100vh;
     justify-content: center;
     align-items: center;
+    flex-shrink: 0;
+    // display: inline-block;
   }
 
     //sexy toast
@@ -32,13 +42,14 @@
 
     //welcome message
     .welcome-message {
+        color: black;
         text-align: center;
         font-family: 'Abel';
-        border: none;
-        background-color: #def9a3;
-        box-shadow: 0.5px 0.5px 0.5px 0.5px green;
-        font-size: 25px;
+        border-top: solid 1px fuchsia;
+        border-bottom: solid 1px fuchsia;
+        font-size: 30px;
         padding: 5px;
+        font-weight: bold;
     }
     .welcome-user, .reminder, .upcoming-event {
       display: inline-block;
@@ -50,29 +61,19 @@
 
     //calendar
     .calendar-div{
-      background-color: green;
       border: 2px solid lightgray;
       /*border-radius: 20px;*/
       text-align: center;
       /*width: 100%;*/
       height: 500px;
-      padding: 50px;
+      padding: 15px;
+      padding-left: 40px;
+      padding-right: 40px;
       font-family: 'Abel', sans-serif, cursive;
       font-size: 20px;
       margin-top: 30px;
       margin-bottom: 50px;
       margin-left: 0px;
-    }
-    .rbc-agenda-view table thead > tr > th {
-      padding: 17px 5px;
-      text-align: left;
-      border-bottom: 1px solid #DDD;
-     }
-    .rbc-ellipsis, .rbc-event-label, .rbc-row-segment .rbc-event-content, .rbc-show-more {
-      display: block;
-      overflow: hidden;
-      -o-text-overflow: ellipsis;
-      text-overflow: ellipsis;
-      white-space: nowrap;
+      background-color: rgb(255,255,255);
     }
 }
