--- a/bc-react/src/style/Sidebar.scss
+++ b/bc-react/src/style/Sidebar.scss
@@ -1,11 +1,11 @@
 .sidebar {
   display: flex;
+  width: 140px;
   height: 100vh;
-  background-color: salmon;
+  background-color: fuchsia;
   justify-content: space-around;
   flex-direction: column;
   text-align: center;
-  position: fixed;
 
   .caption {
     color: white;
@@ -14,10 +14,9 @@
     font-size: 2em;
   }
   img {
-    flex-shrink: 1;
     padding-left: 25px;
     padding-right: 25px;
-    width: 20px;
-    height: 20px;
+    width: 60px;
+    height: 60px;
   }
 }
