--- a/bc-react/src/style/UserProfile.scss
+++ b/bc-react/src/style/UserProfile.scss
@@ -28,41 +28,44 @@
     text-shadow: none;
   }
 
-  .edit {
-    color: orange;
-    width: 30%;
-    text-align: center;
-    font-family: 'Amatic SC';
-    font-size: 3em;
-  }
-.profile-table {
-  .fields {
-    font-weight: bold;
-  }
-
-  td {
+  .read-only, .editable {
+    font-family: 'Abel', sans-serif;
+    font-size: 1.3em;
     border: none;
     background-color: white;
-    font-family: 'Abel';
-    font-size: 20px;
     padding-left: 5px;
     padding-right: 5px;
     white-space: nowrap;
     overflow: hidden;
   }
 
-  tr td {
+  .edit input {
+    color: orange;
     background-color: white;
-    padding: none;
+    border: none;
+    width: 100%;
+    text-align: center;
+    font-family: 'Amatic SC', sans-serif;
+    font-size: 3em;
   }
 
-  input {
+  .field {
+    font-weight: bold;
     border: none;
-    background-color: transparent;
-    margin: 0;
+    font-family: 'Abel', sans-serif;
+    font-size: 1.3em;
+    padding-left: 5px;
+    padding-right: 5px;
+    white-space: nowrap;
+    overflow: hidden;
   }
-}
+
   img:hover {
     cursor: pointer;
   }
+
+  .profile-table {
+    background-color: white;
+  }
+
 }
