--- a/bc-react/src/style/Home.scss
+++ b/bc-react/src/style/Home.scss
@@ -1,30 +1,17 @@
 .home-page {
-
-  //
-  // display: flex;
-  // flex-direction: column;
-  // min-height: 100vh;
-  // justify-content: center;
-  // align-items: center;
-
-  .sidebar-wrapper {
-    // display: flex;
-    // justify-content: flex-start;
-    // flex-direction: column;
-    // text-align: center;
-    display: inline-block;
-    height: 100vh;
-    position: fixed;
-  }
+  display: flex;
+  flex-direction: row;
+  height: 100vh;
 
   .entirepage {
+    flex: 1;
+    overflow: auto;
+  }
+
+  .nested {
     display: flex;
     flex-direction: column;
-    // min-height: 100vh;
-    justify-content: center;
     align-items: center;
-    flex-shrink: 0;
-    // display: inline-block;
   }
 
     //sexy toast
