user profile flexed out!

--- a/bc-react/src/style/App.scss
+++ b/bc-react/src/style/App.scss
@@ -15,6 +15,18 @@
 @import url('./SearchBar.css');
 @import url('./Events.css');
 
+.wrapper {
+  display: flex;
+  flex-direction: row;
+  height: 100vh;
+}
+
+.nested {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .box1 {background-color: red;}
 .box2 {background-color: orange;}
 .box3 {background-color: yellow;}
