mini-sidebar no longer appears on entry pages

--- a/bc-react/src/style/Sidebar.scss
+++ b/bc-react/src/style/Sidebar.scss
@@ -50,6 +50,7 @@
     }
 }
 
+.home-page {
 @media all and (max-height: 365px) {
 
     .sidebar .nesting {
@@ -72,4 +73,5 @@
     justify-content: space-around;
   }
 
+}
 }
