--- a/bc-react/src/style/SplashPage.scss
+++ b/bc-react/src/style/SplashPage.scss
@@ -13,7 +13,10 @@
 
   .button-container {
     align-self: center;
-    width: 300px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
   }
 
   .link {
@@ -30,7 +33,7 @@
     text-align: center;
     flex-wrap: wrap;
     display: inline-block;
-    font-size: 40px;
+    font-size: 2.9em;
   }
 
   .sidebar .nesting {
