--- a/bc-react/src/style/Sidebar.scss
+++ b/bc-react/src/style/Sidebar.scss
@@ -2,12 +2,10 @@
   order: -1;
   text-align: center;
 
-  .nesting {
+  .nested {
     background-color: fuchsia;
     height: 100vh;
     width: 120px;
-    display: flex;
-    flex-direction: column;
     justify-content: space-around;
   }
 
@@ -50,21 +48,9 @@
     }
 }
 
-.home-page {
 @media all and (max-height: 365px) {
 
-    .sidebar .nesting {
-      display: none;
-    }
-
-    .mini-sidebar {
-      display: flex;
-      justify-content: space-around;
-    }
-}
-@media all and (max-width: 820px) {
-
-  .sidebar .nesting {
+  .sidebar .nested {
     display: none;
   }
 
@@ -72,6 +58,15 @@
     display: flex;
     justify-content: space-around;
   }
-
 }
+@media all and (max-width: 820px) {
+
+  .sidebar .nested {
+    display: none;
+  }
+
+  .mini-sidebar {
+    display: flex;
+    justify-content: space-around;
+  }
 }
