styled MessageBoard as sticky and added to all relevant pages, added Toggle component for same, renamed Slideshow.js to Photos.js and PlaceIndex.js to Places.js to match navbar

--- a/bc-react/src/style/App.scss
+++ b/bc-react/src/style/App.scss
@@ -14,7 +14,7 @@
 @import url('./UserProfile.css');
 @import url('./SearchBar.css');
 @import url('./Events.css');
-@import url('./Slideshow.css');
+@import url('./Photos.css');
 
 .wrapper {
   display: flex;
@@ -26,6 +26,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.page-title {
+  text-align: center;
+  font-family: 'Dancing Script', sans-serif;
+  font-size: 4em;
+  font-weight: bold;
 }
 
 .box1 {background-color: red;}
