--- a/bc-react/src/style/Messageboard.scss
+++ b/bc-react/src/style/Messageboard.scss
@@ -100,6 +100,10 @@ form {
   font-size: 15px;
   font-family: 'Abel', sans-serif;
   background-color: #f5f5f5;
-
   }
+.submit-field {
+  padding-left: 3px;
+  padding-right: 3px;
+}
+
 }
