admin user table flexed out

--- a/bc-react/src/style/AdminPage.scss
+++ b/bc-react/src/style/AdminPage.scss
@@ -85,25 +85,19 @@ form {
     background-color: #def9a3;
   }
 
-  .icon_td {
-      background-color: white;
-      border: none;
-  }
-
-  tr .editable {
+  .editable {
     font-style: italic;
     color: fuchsia;
     text-shadow: 0.1px 0.1px black;
   }
 
-  tr .read-only {
+  .read-only {
     font-style: normal;
     color: black;
     text-shadow: none;
   }
 
   .admin-th, .admin-td {
-    flex: 1;
     border: 1px solid black;
     background-color: #eeeeee;
     border-color: #c1c1c1;
@@ -117,14 +111,8 @@ form {
     overflow: hidden;
   }
 
-  tr td {
-    background-color: #eeeeee;
-    padding: none;
-  }
-
-  td {
-    border: 1px solid black;
-    border-color: #c1c1c1;
+  .table-row-item {
+    border: 1px solid #c1c1c1;
 
       input {
         border: none;
@@ -135,36 +123,19 @@ form {
       }
   }
 
-  .table_icons {
-    background-color: white;
-    border: none;
-  }
-
   #edit_icon {
     width: 22px;
     height: 22px;
-    margin-top: -25px;
-    margin-left: -20px;
   }
 
   #delete_icon {
+    padding-left: 5px;
     width: 22px;
     height: 22px;
-    margin-top: -25px;
-    margin-left: -10px;
   }
 
-  #edit_icon:hover, #delete_icon:hover {
+  .icon:hover {
     cursor: pointer;
-  }
-
-  .admin-table {
-    margin-top: -15px;
-    width: 831px;
-  }
-
-  .header {
-    display: flex;
   }
 
   .search_bar_wrapper {
@@ -180,14 +151,6 @@ form {
     text-align: center;
     padding: none;
     margin: none;
-  }
-
-  .table-data {
-    display: flex;
-  }
-
-  .table-data-item {
-    flex: 1;
   }
 
   .calendar-div{
@@ -219,4 +182,50 @@ form {
     font-size: 1.3em;
   }
 
+  .table {
+    display: flex;
+    flex-flow: column nowrap;
+   }
+
+  .table-row{
+    display: flex;
+    flex-flow: row nowrap;
+    font-family: 'Abel';
+    font-size: 20px;
+    padding-left: 5px;
+    padding-right: 5px;
+    white-space: nowrap;
+    overflow: hidden;
+  }
+
+  .table-row-item {
+    display: flex;
+    flex-flow: row nowrap;
+    word-break: break-word;
+    background-color: #eeeeee;
+    padding-left: 5px;
+    padding-right: 5px;
+    white-space: nowrap;
+    overflow: hidden;
+    align-items: center;
+    justify-content: center;
+  }
+
+    .icon {
+      background-color: white;
+      border: none;
+    }
+
+    .hidden {
+      width: 22px;
+      border-color: white;
+      background-color: white;
+    }
+
+  .id           {width: 40px;}
+  .firstName    {width: 90px;}
+  .lastName     {width: 100px;}
+  .email        {width: 200px;}
+  .neighborhood {width: 130px;}
+  .active       {width: 60px;}
 }
