--- a/bc-react/src/style/Sidebar.scss
+++ b/bc-react/src/style/Sidebar.scss
@@ -9,7 +9,7 @@
     justify-content: space-around;
   }
 
-  a {
+  .item {
     color: white;
     font-family: 'Amatic SC', sans-serif;
     text-transform: uppercase;
@@ -22,6 +22,10 @@
     padding-right: 25px;
     width: 60px;
     height: 60px;
+  }
+
+  .item:hover, img:hover {
+    cursor: pointer;
   }
 
 }
@@ -37,6 +41,10 @@
         display: unset;
       }
     }
+
+    img:hover {
+      cursor: pointer;
+    }
 }
 
 @media all and (max-height: 385px) {
@@ -45,6 +53,10 @@
       .caption {
         display: none;
       }
+    }
+
+    img:hover {
+      cursor: pointer;
     }
 }
 
@@ -59,6 +71,10 @@
     justify-content: space-around;
     width: 400px;
   }
+
+  img:hover {
+    cursor: pointer;
+  }
 }
 @media all and (max-width: 820px) {
 
@@ -70,5 +86,9 @@
     display: flex;
     justify-content: space-around;
     width: 400px;
+  }
+
+  img:hover {
+    cursor: pointer;
   }
 }
