restored form styling and added disabled property to Input

--- a/bc-react/src/style/Messageboard.scss
+++ b/bc-react/src/style/Messageboard.scss
@@ -94,7 +94,7 @@ transform: translateY(0.5px);
   color: blue;
 }
 
-.submit-chat-button, form input {
+.submit-chat-button, .message-board form input {
   border: 1px solid lightgray;
   border-radius: 5px;
   font-size: 15px;
