--- a/bc-react/src/style/App.scss
+++ b/bc-react/src/style/App.scss
@@ -15,6 +15,7 @@
 @import url('./SearchBar.css');
 @import url('./Events.css');
 @import url('./Photos.css');
+@import url('./PageNotFound.css');
 
 .wrapper {
   display: flex;
