--- a/bc-react/src/style/UserProfile.scss
+++ b/bc-react/src/style/UserProfile.scss
@@ -4,7 +4,7 @@
 
   .welcome-user {
     text-align: center;
-    font-family: 'Dancing Script';
+    font-family: 'Dancing Script', sans-serif;
     font-size: 52px;
     font-style: italic;
     font-weight: bold;
