error message appears when username/password combo is invalid

--- a/bc-react/src/style/UserLogin.scss
+++ b/bc-react/src/style/UserLogin.scss
@@ -21,6 +21,9 @@
 
   .validate {
     text-align: center;
+    font-size: 17px;
+    color: #e22020;
+    margin-top: 10px;
   }
 
   .validate img {
