--- a/bc-react/src/style/UserLogin.scss
+++ b/bc-react/src/style/UserLogin.scss
@@ -5,6 +5,7 @@
     height: 100vh;
     flex-direction: column;
     justify-content: flex-start;
+    align-items: center;
   }
 
   .header-wrapper {
@@ -24,6 +25,7 @@
     font-size: 17px;
     color: #e22020;
     margin-top: 10px;
+    width: 200px;
   }
 
   .validate img {
