modifying welcome message

--- a/bc-react/src/style/Home.scss
+++ b/bc-react/src/style/Home.scss
@@ -25,6 +25,7 @@
         font-size: 30px;
         padding: 5px;
         font-weight: bold;
+        max-width: 650px;
     }
     .welcome-user, .reminder, .upcoming-event {
       display: inline-block;
