radio buttons working in place of RSVPButton

--- a/bc-react/src/style/Events.scss
+++ b/bc-react/src/style/Events.scss
@@ -52,3 +52,14 @@
     margin-top: 30px;
   }
 }
+
+.RSVP {
+  display: flex;
+  flex-direction: row;
+  background-color: blue;
+  flex-wrap: wrap;
+}
+
+.RSVP-item{
+  display: inline-block;
+}
