added active column to places and events in Admin, deleted actions.js

--- a/bc-react/src/style/AdminPage.scss
+++ b/bc-react/src/style/AdminPage.scss
@@ -240,7 +240,7 @@ form {
   .lastName     {width: 100px;}
   .email        {width: 200px;}
   .neighborhood {width: 130px;}
-  .active       {width: 60px;}
+  .active       {width: 70px;}
 
   .name         {width: 160px;}
   .yelp         {width: 40px;}
@@ -250,6 +250,6 @@ form {
   .phone        {width: 120px;}
 
   .date         {width: 170px;}
-  .guest        {width: 120px;}
+  .speaker      {width: 120px;}
   .rsvp         {width: 140px;}
 }
