added admin column to users, a little buggy tho

--- a/bc-react/src/style/AdminPage.scss
+++ b/bc-react/src/style/AdminPage.scss
@@ -241,6 +241,7 @@ form {
   .email        {width: 200px;}
   .neighborhood {width: 130px;}
   .active       {width: 70px;}
+  .admin        {width: 70px;}
 
   .name         {width: 160px;}
   .yelp         {width: 40px;}
